Bug 465227 - Wine system tray entries are not interactable under Wayland when panel is at the top
Summary: Wine system tray entries are not interactable under Wayland when panel is at ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: master
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-03 13:16 UTC by Naxdy
Modified: 2023-02-06 17:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Naxdy 2023-02-03 13:16:19 UTC
System tray entries provided by applications running under Wine are not interactable in the Wayland session.


STEPS TO REPRODUCE
1. Log into plasma wayland
2. Launch an application via Wine that provides a system tray entry
3. Attempt to interact with the system tray entry

OBSERVED RESULT
Entry is not interactable

EXPECTED RESULT
Entry is interactable

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Gentoo / 5.27 beta
(available in About System)
KDE Plasma Version: 5.27 beta
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
-
Comment 1 David Edmundson 2023-02-03 13:18:31 UTC
Do you have scaling other than 100%?
Comment 2 Naxdy 2023-02-03 13:54:42 UTC
- Display -
Global Scale: 100%
Refresh Rate: 120Hz
Resolution: 5120x1440

- Font -
Anti-Aliasing: ENABLED
Exclude range from anti-aliasing: DISABLED
Sub-pixel rendering: None
Hinting: Slight
Force Font DPI: DISABLED
Comment 3 Andreas Sturmlechner 2023-02-03 21:37:14 UTC
Did it work for you in a previous version, if so, how long ago/which update broke it possibly?
Comment 4 Naxdy 2023-02-03 21:38:09 UTC
It hasn't worked in 5.26, not sure about prior versions since I didn't really try out Wayland before that.
Comment 5 Fushan Wen 2023-02-05 03:18:23 UTC
What wine application are you running?
Comment 6 Naxdy 2023-02-05 03:32:37 UTC
Rockstar Games Launcher, Ubisoft Connect, and IINACT all exhibit this problem for me.

IINACT should be the easiest to test since it's just a portable application that sits in the tray: https://github.com/marzent/IINACT/releases

The context menu should appear on right click and offer "Settings" and "Quit" as entries.

They all work fine and are interactable under X11. Wine version didn't seem to make a difference (tried system Wine 7.19 and 8.1, as well as lutris GE Proton)
Comment 7 Fushan Wen 2023-02-05 04:05:54 UTC
I tested with BitComet and cannot reproduce the bug.
Comment 8 Naxdy 2023-02-05 04:11:06 UTC
Upon further testing, I've discovered that this bug only occurs when the panel is placed at the top of the screen.

If I move my panel to the bottom, then the context menu appears no problem, but if I move it to the top, it does not show up. Currently it is unclear to me whether it doesn't show up at all, or is simply drawn out of bounds however.
Comment 9 Fushan Wen 2023-02-05 04:13:40 UTC
Can reproduce with top panel
Comment 10 Bug Janitor Service 2023-02-05 05:40:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2581
Comment 11 Naxdy 2023-02-05 06:11:55 UTC
Applied your patch locally, but still doesn't work for me (context menu doesn't show on right click)

My systray is in the top right, screen resolution is 5120x1440, panel height is 32px

If I move the panel to the bottom, entries are interactable no problem
Comment 12 Fushan Wen 2023-02-05 06:20:47 UTC
(In reply to Naxdy from comment #11)
> Applied your patch locally, but still doesn't work for me (context menu
> doesn't show on right click)
> 
> My systray is in the top right, screen resolution is 5120x1440, panel height
> is 32px
> 
> If I move the panel to the bottom, entries are interactable no problem

Did you also apply https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2503 ?
Comment 13 Fushan Wen 2023-02-05 06:26:11 UTC
Also remember to restart xembedsniproxy after applying the patch
Comment 14 Naxdy 2023-02-05 06:34:00 UTC
> Did you also apply
> https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2503 ?

Not explicitly, but I'm building the latest 5.27 branch and also checked my local copy and that MR is already in. Full system reboot, but still only works if panel is at the bottom.
Comment 15 Naxdy 2023-02-06 15:43:50 UTC
Correction: The MR does indeed fix the issue for me. My problem was that Gentoo isolates xembed-sni-proxy into its own package, which I did not apply the patch to.

All good from my end!
Comment 16 Fushan Wen 2023-02-06 17:49:34 UTC
Git commit 00a40c2f72353f365da16b0b02440190f60d7fc4 by Fushan Wen.
Committed on 06/02/2023 at 16:27.
Pushed by fusionfuture into branch 'master'.

xembedsniproxy: use position from DBus to move proxy window

root_x and root_y can sometimes vary from the click position. This makes
XEmbed icons clickable when the system tray is in a top panel.
FIXED-IN: 5.27

M  +4    -10   xembed-sni-proxy/sniproxy.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/00a40c2f72353f365da16b0b02440190f60d7fc4
Comment 17 Fushan Wen 2023-02-06 17:50:00 UTC
Git commit d25048bd66d46798b692adaec46ff6d804bd4662 by Fushan Wen.
Committed on 06/02/2023 at 17:49.
Pushed by fusionfuture into branch 'cherry-pick-00a40c2f'.

xembedsniproxy: use position from DBus to move proxy window

root_x and root_y can sometimes vary from the click position. This makes
XEmbed icons clickable when the system tray is in a top panel.
FIXED-IN: 5.27


(cherry picked from commit 00a40c2f72353f365da16b0b02440190f60d7fc4)

M  +4    -10   xembed-sni-proxy/sniproxy.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d25048bd66d46798b692adaec46ff6d804bd4662