xembedsniproxy: use position from DBus to move proxy window

root_x and root_y can sometimes vary from the click position. This makes
XEmbed icons clickable when the system tray is in a top panel.

BUG: 465227
FIXED-IN: 5.27


(cherry picked from commit 00a40c2f72353f365da16b0b02440190f60d7fc4)